# Copyright (c) 2024 The AONE SFU project authors.
import("../../rtc_peerconnection.gni")

group("audio") {
    deps = [
        ":RTCAudioPacketRouteFeeder",
        ":RTCAudioPacketRoutingSink",
        ":RTCAudioReceiveStreamImpl",
        ":RTCAudioSendStreamImpl",
        ":RTCAudioSendStreamRouter",
        ":RTCChannelRtpPacketReceiverInterface",
    ]
}

rtc_sfu_source_set("RTCAudioPacketRouteFeeder") {
    sources = [
        "RTCAudioPacketRouteFeeder.cc",
        "RTCAudioPacketRouteFeeder.h",
    ]

    deps = [
        ":RTCAudioPacketRoutingSink",
        "../api:RTCPacketRouteSinkInterface",
        "../api/audio:RTCAudioPacketRouteSourceInterface",
        "../call:RTCAudioSendStream",
        "..:_deprecate_defines",
        "../../src/api/task_queue",
        "../../src/api:jsep_ice_candidate",
        "../../src/modules/include:module",
        "../../src/modules/rtp_rtcp:rtp_rtcp_format",
        "../../src/modules/utility",
        "../../src/rtc_base:constructor_magic",
        "../../src/rtc_base:logging",
        "../../src/rtc_base:location",
        "../../src/rtc_base:task_queue",
        "../../src/rtc_base:time_utils",
        "../../src/rtc_base/system:no_unique_address",
        "../../src/rtc_base/synchronization:mutex",
        "../../src/rtc_base/task_utils:repeating_task",
        "../../src/system_wrappers",
    ]
}

rtc_sfu_source_set("RTCAudioPacketRoutingSink") {
    sources = [
        "RTCAudioPacketRoutingSink.h",
    ]

    deps = [
        "../../src/modules/rtp_rtcp:rtp_rtcp_format",
        "../../src/rtc_base/system:rtc_export",
    ]
}

rtc_sfu_source_set("RTCAudioReceiveStreamImpl") {
    sources = [
        "RTCAudioReceiveStreamImpl.cc",
        "RTCAudioReceiveStreamImpl.h",
    ]

    deps = [
        ":RTCChannelRtpPacketReceiverInterface",
        "../api/audio:RTCAudioRtpPacketListenSinkInterface",
        "../call:RTCAudioReceiveStream",
        "../call:RTCRtpTransportControllerSendInterface",
        "../modules/pacing:RTCPacketRouter",
        "../../src/api:array_view",
        "../../src/api:rtp_headers",
        "../../src/call:rtp_config",
        "../../src/call:rtp_stream_receiver_controller_interface",
        "../../src/modules/rtp_rtcp",
        "../../src/modules/utility",
        "../../src/rtc_base:checks",
        "../../src/rtc_base:logging",
        "../../src/rtc_base:stringutils",
        "../../src/rtc_base:time_utils",
        "../../src/rtc_base:thread_checker",
        "../../src/system_wrappers",
    ]
}

rtc_sfu_source_set("RTCAudioSendStreamImpl") {
    sources = [
        "RTCAudioSendStreamImpl.cc",
        "RTCAudioSendStreamImpl.h",
    ]

    deps = [
        ":RTCAudioPacketRouteFeeder",
        ":RTCAudioSendStreamRouter",
        "..:_deprecate_defines",
        "../api/audio:RTCAudioPacketRouteSourceInterface",
        "../call:RTCRtpTransportControllerSendInterface",
        "../call:RTCAudioSendStream",
        "../modules/feedback:RTCFeedbackPacketRouter",        
        "../../src/api/task_queue",
        "../../src/modules/utility",  
        "../../src/modules/rtp_rtcp:rtp_rtcp_format",
        "../../src/rtc_base:event",
        "../../src/rtc_base:logging",
        "../../src/rtc_base:race_checker",
        "../../src/rtc_base:task_queue",
        "../../src/rtc_base:thread_checker",
    ]
}

rtc_sfu_source_set("RTCAudioSendStreamRouter") {
    sources = [
        "RTCAudioSendStreamRouter.cc",
        "RTCAudioSendStreamRouter.h",
    ]

    deps = [
        ":RTCAudioPacketRouteFeeder",
        ":RTCAudioPacketRoutingSink",
        "..:_deprecate_defines",
        "../call:RTCAudioSendStream",
        "../call:RTCRtpTransportControllerSendInterface",
        "../modules/rtp_rtcp:RTCRtpRtcpInterface",
        "../modules/rtp_rtcp:RTCRtpRtcpSendImpl",
        "../modules/rtp_rtcp:RTCRtpRtcpRecvImpl",
        "../modules/feedback:RTCFeedbackPacketRouter",
        "../modules/pacing:RTCPacketRouter",
        "../../src/api:rtp_headers",
        "../../src/modules/include:module",
        "../../src/modules/utility",
        "../../src/modules/rtp_rtcp:rtp_rtcp_format",
        "../../src/modules/rtp_rtcp",
        "../../src/modules/congestion_controller/rtp:transport_feedback",
        "../../src/rtc_base:logging",
        "../../src/rtc_base:location",
        "../../src/rtc_base:task_queue",
        "../../src/rtc_base:time_utils",
        "../../src/rtc_base:event",
        "../../src/rtc_base:weak_ptr",
        "../../src/rtc_base/task_utils:repeating_task",
        "../../src/rtc_base:random",
        "../../src/system_wrappers",
    ]
}

rtc_sfu_source_set("RTCChannelRtpPacketReceiverInterface") {
    public = [
        "RTCChannelRtpPacketReceiverInterface.h",
    ]    

    sources = [
        "RTCChannelRtpPacketReceiver.cc",
        "RTCChannelRtpPacketReceiver.h",
    ]

    deps = [
        "..:_deprecate_defines",
        "../api/audio:RTCAudioRtpPacketListenSinkInterface",
        "../call:RTCAudioReceiveStream",
        "../modules/rtp_rtcp:RTCRtpRtcpRecvImpl",
        "../modules/pacing:RTCPacketRouter",
        "../../src/api:rtp_headers",
        "../../src/modules/rtp_rtcp",
        "../../src/modules/rtp_rtcp:rtp_rtcp_format",
        "../../src/rtc_base:checks",
        "../../src/rtc_base:logging",
        "../../src/rtc_base:time_utils",
        "../../src/rtc_base:thread_checker",
        "../../src/rtc_base/synchronization:mutex",        
        "../../src/api/audio_codecs",
        "../../src/modules/utility",
        "../../src/call:rtp_packet_sink_interface",
        "../../src/system_wrappers",
    ]
}
